--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -17,7 +17,7 @@
     <hocon>
       <![CDATA[
 akka {
-    loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
+
     stdout-loglevel = DEBUG
     loglevel = DEBUG
     log-config-on-start = on
@@ -26,10 +26,10 @@ akka {
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
-            receive = off
-            autoreceive = off
-            lifecycle = off
-            event-stream = off
+            receive = on
+            autoreceive = on
+            lifecycle = on
+            event-stream = on
             unhandled = on
         }
     }
