--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -16,7 +16,7 @@ akka {
         loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
               stdout-loglevel = DEBUG
               loglevel = DEBUG
-              log-config-on-start = on   
+              log-config-on-start = on
     actor {
 
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
@@ -33,7 +33,7 @@ akka {
     remote {
               log-remote-lifecycle-events = DEBUG
               log-received-messages = on
-              log-sent-messages = on    
+              log-sent-messages = on
                 helios.tcp {
                     port = 0
                     hostname = 0.0.0.0
@@ -55,6 +55,14 @@ akka {
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.assert" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
