--- a/InventoryService.Tests/packages.config
+++ b/InventoryService.Tests/packages.config
@@ -1,13 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.1.1" targetFramework="net452" />
-  <package id="Akka.TestKit" version="1.1.1" targetFramework="net452" />
-  <package id="Akka.TestKit.Xunit2" version="1.1.1" targetFramework="net452" />
+  <package id="Akka" version="1.0.8" targetFramework="net452" />
+  <package id="Akka.Remote" version="1.0.8" targetFramework="net452" />
+  <package id="Akka.TestKit" version="1.0.8" targetFramework="net452" />
+  <package id="Akka.TestKit.Xunit2" version="1.0.8" targetFramework="net452" />
   <package id="FsCheck" version="2.6.0" targetFramework="net452" />
   <package id="FsCheck.Xunit" version="2.6.0" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
+  <package id="Helios" version="1.4.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
-  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net452" developmentDependency="true" />
+  <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
