--- a/InventoryService.AkkaInMemory/InventoryService.AkkaInMemoryServer.csproj
+++ b/InventoryService.AkkaInMemory/InventoryService.AkkaInMemoryServer.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InventoryServerOptions.cs" />
     <Compile Include="InventoryServiceAkkaInMemory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
