--- a/InventoryService.WebUI/InventoryService.WebUI.csproj
+++ b/InventoryService.WebUI/InventoryService.WebUI.csproj
@@ -43,6 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="web\css\animate.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="web\css\freelancer.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
