update to lattest akka, added few logging

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -3,10 +3,10 @@
   <configSections>
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
-  <appSettings>
+  <appSettings  >
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@cloudapp.azure.com:100/user/InventoryActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
