--- a/InventoryService.NotificationActor/packages.config
+++ b/InventoryService.NotificationActor/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8" targetFramework="net452" />
-  <package id="Akka.Cluster" version="1.0.8.25-beta" targetFramework="net452" />
-  <package id="Akka.Logger.NLog" version="1.0.8" targetFramework="net452" />
-  <package id="Akka.Remote" version="1.0.8" targetFramework="net452" />
+  <package id="Akka" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Cluster" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Logger.NLog" version="1.1.1" targetFramework="net452" />
+  <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
-  <package id="Helios" version="1.4.2" targetFramework="net452" />
+  <package id="Helios" version="2.1.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -15,7 +15,7 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NLog" version="4.3.7" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
