--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -36,12 +36,15 @@ akka {
 
     remote {
               log-remote-lifecycle-events = DEBUG
-              log-received-messages = off
-              log-sent-messages = off
+              log-received-messages = on
+              log-sent-messages = on
                 helios.tcp {
                     port = 10000
                     hostname =0.0.0.0
                     public-hostname = "localhost"
+                    log-remote-lifecycle-events = DEBUG
+                    log-received-messages = on
+                    log-sent-messages = on
                 }
             }
 }
@@ -63,7 +66,7 @@ akka {
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
