Marking todo points to use async/await properly

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -3,10 +3,10 @@
   <configSections>
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
-  <appSettings  >
+  <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
@@ -42,7 +42,7 @@ akka {
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
