--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -40,8 +40,7 @@ akka {
               log-sent-messages = on
                 helios.tcp {
                     port = 10000
-                    hostname =0.0.0.0
-                    public-hostname = "localhost"
+                    hostname = localhost
                     log-remote-lifecycle-events = DEBUG
                     log-received-messages = on
                     log-sent-messages = on
