--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -21,7 +21,7 @@
       <![CDATA[
 akka {
     loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
-    stdout-loglevel = DEBUG
+    #stdout-loglevel = DEBUG
     loglevel = DEBUG
     log-config-on-start = on
     actor {
