--- a/PackageQA/app.config
+++ b/PackageQA/app.config
@@ -14,7 +14,7 @@
       <![CDATA[
         akka {
 
-    stdout-loglevel = DEBUG
+    #stdout-loglevel = DEBUG
     loglevel = DEBUG
     log-config-on-start = on
     actor {
