--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -14,7 +14,7 @@
 akka {
 
         loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
-              stdout-loglevel = DEBUG
+              #stdout-loglevel = DEBUG
               loglevel = DEBUG
               log-config-on-start = on
     actor {
@@ -58,11 +58,19 @@ akka {
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="xunit.assert" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.execution.desktop" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
