--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
     <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
-    <add key="ServerEndPoint" value="http://*:10086/" />
+    <!--<add key="ServerEndPoint" value="http://*:10086/" />-->
     <add key="ServerActorSystemName" value="InventoryService-Server" />
   </appSettings>
   <akka>
@@ -14,30 +14,15 @@
       <![CDATA[
         akka {
 
-    stdout-loglevel = DEBUG
-    loglevel = DEBUG
-    log-config-on-start = on
     actor {
 
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
-
-        debug {
-            receive = on
-            autoreceive = on
-            lifecycle = on
-            event-stream = on
-            unhandled = on
-        }
     }
 
     remote {
-              log-remote-lifecycle-events = DEBUG
-              log-received-messages = off
-              log-sent-messages = off
                 helios.tcp {
                     port = 10000
-                    hostname =0.0.0.0
-                    public-hostname = "localhost"
+                    hostname =localhost
                 }
             }
 }
@@ -48,7 +33,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="xunit.assert" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -61,6 +46,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.execution.desktop" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
