--- a/InventoryService.Tests/packages.config
+++ b/InventoryService.Tests/packages.config
@@ -4,9 +4,9 @@
   <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
   <package id="Akka.TestKit" version="1.1.2" targetFramework="net452" />
   <package id="Akka.TestKit.Xunit2" version="1.1.2" targetFramework="net452" />
-  <package id="FsCheck" version="2.6.0" targetFramework="net452" />
-  <package id="FsCheck.Xunit" version="2.6.0" targetFramework="net452" />
-  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
+  <package id="FsCheck" version="2.6.2" targetFramework="net452" />
+  <package id="FsCheck.Xunit" version="2.6.2" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.0.1.7-alpha" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
@@ -21,10 +21,10 @@
   <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
-  <package id="xunit" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="xunit" version="2.2.0-beta3-build3402" targetFramework="net452" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
+  <package id="xunit.assert" version="2.2.0-beta3-build3402" targetFramework="net452" />
+  <package id="xunit.core" version="2.2.0-beta3-build3402" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.2.0-beta3-build3402" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.2.0-beta3-build3402" targetFramework="net452" />
 </packages>
