--- a/InventoryService/packages.config
+++ b/InventoryService/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Akka" version="1.1.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="NLog" version="4.3.7" targetFramework="net452" />
+  <package id="NLog" version="4.4.0-betaV15" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
 </packages>
