Letting UI subscribe to inventory notifications
Removed UI from inventory service , allowing UI actorsystem to subscribe
remotely for notification messages

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
