increase max payload for remoting

--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -35,6 +35,7 @@ akka {
     }
 
     remote {
+    maximum-payload-bytes = 30000000 bytes
               #log-remote-lifecycle-events = DEBUG
               #log-received-messages = on
               #log-sent-messages = on
@@ -44,6 +45,10 @@ akka {
                     #log-remote-lifecycle-events = DEBUG
                     #log-received-messages = on
                     #log-sent-messages = on
+                    message-frame-size =  30000000b
+      send-buffer-size =  30000000b
+      receive-buffer-size =  30000000b
+      maximum-frame-size = 30000000b
                 }
             }
 }
