--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -28,7 +28,7 @@ akka {
     remote {
                 helios.tcp {
                     port = 0
-                     hostname =0.0.0.0
+                     hostname =localhost
                 }
             }
 }
